# OpenGl-Rubic

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
lib/glad/include/glad/: gl.h
lib/glad/src/: gl.c
src/: callbacks.h  main.cpp
src/engine/: Camera.h  Shader.h
src/engine/primitives/: RubikAtomCube.h
src/shaders/: rubikFragment.glsl  rubikVertex.glsl
